platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

const _sweeteditorAssetId = 'package:sweeteditor/lib/sweeteditor.dart';

/// Create a Document and return its handle
/// @param text UTF8 text content
/// @return Document handle
@ffi.Native<ffi.IntPtr Function(ffi.Pointer<ffi.Char>)>(
  assetId: _sweeteditorAssetId,
)
external int create_document_from_utf8(ffi.Pointer<ffi.Char> text);

/// Create a Document and return its handle
/// @param text UTF16 text content
/// @return Document handle
@ffi.Native<ffi.IntPtr Function(ffi.Pointer<ffi.Uint16>)>(
  assetId: _sweeteditorAssetId,
)
external int create_document_from_utf16(ffi.Pointer<ffi.Uint16> text);

/// Create a Document and return its handle(created from local file)
/// @param path Local file path
/// @return Document handle
@ffi.Native<ffi.IntPtr Function(ffi.Pointer<ffi.Char>)>(
  assetId: _sweeteditorAssetId,
)
external int create_document_from_file(ffi.Pointer<ffi.Char> path);

/// Free Document
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_document(int document_handle);

/// Get Document UTF8 text
/// @return UTF8 text content; caller owns returned buffer and must free it with free_u8_string
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.IntPtr)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Char> get_document_utf8(int document_handle);

/// Get Document UTF16 text
/// @return UTF16 text content; caller owns returned buffer and must free it with free_u16_string
@ffi.Native<ffi.Pointer<ffi.Uint16> Function(ffi.IntPtr)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint16> get_document_utf16(int document_handle);

/// Get total line count of Document
/// @return total line count of Document
@ffi.Native<ffi.Size Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int get_document_line_count(int document_handle);

/// Get UTF8 text of a specific Document line
/// @param line Line number
/// @return UTF8 text content of the specified line; caller owns returned buffer and must free it with free_u8_string
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Char> get_document_line_utf8(
  int document_handle,
  int line,
);

/// Get UTF16 text of a specific Document line
/// @param line Line number
/// @return UTF16 text content of the specified line; caller owns returned buffer and must free it with free_u16_string
@ffi.Native<ffi.Pointer<ffi.Uint16> Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint16> get_document_line_utf16(
  int document_handle,
  int line,
);

/// Create EditorCore and return its handle
/// @param measurer Text measurement callback set
/// @param options_data EditorOptions binary payload（LE byte order）:
/// f32 touch_slop         — Move threshold for a tap (default 10)
/// i64 double_tap_timeout — Time window for double tap (default 300ms)
/// i64 long_press_ms      — Long press threshold (default 500ms)
/// f32 fling_friction     — Fling friction coefficient (default 3.5)
/// f32 fling_min_velocity — Minimum fling velocity in px/s (default 50)
/// f32 fling_max_velocity — Maximum fling velocity in px/s (default 8000)
/// u64 max_undo_stack_size — Max undo stack depth, 0=unlimited (default 512)
/// i64 key_chord_timeout_ms — Key chord pending timeout in ms (default 2000)
/// u8 reveal_selection_end_on_select_all — When true, selectAll() reveals the selection end (default false)
/// @param options_size Byte length of options_data
/// @return EditorCore handle
@ffi.Native<
  ffi.IntPtr Function(text_measurer_t, ffi.Pointer<ffi.Uint8>, ffi.Size)
>(assetId: _sweeteditorAssetId)
external int create_editor(
  text_measurer_t measurer,
  ffi.Pointer<ffi.Uint8> options_data,
  int options_size,
);

/// Free EditorCore
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_editor(int editor_handle);

/// Load Document
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.IntPtr, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> set_editor_document(
  int editor_handle,
  int document_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set editor viewport
/// @param width Editor view width
/// @param height Editor view height
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Int16,
    ffi.Int16,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> set_editor_viewport(
  int editor_handle,
  int width,
  int height,
  ffi.Pointer<ffi.Size> out_size,
);

/// Notify editor that font metrics have changed (call after font/scale changes)
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_on_font_metrics_changed(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set fold arrow display mode (affects reserved gutter width)
/// @param mode 0=AUTO(auto show when fold regions exist), 1=ALWAYS(always reserve), 2=HIDDEN(always hide)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_fold_arrow_mode(
  int editor_handle,
  int mode,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set auto wrap mode
/// @param mode 0=NONE(no wrap), 1=CHAR_BREAK(character-level wrap), 2=WORD_BREAK(word-level wrap)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_wrap_mode(
  int editor_handle,
  int mode,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set tab size (number of spaces per tab stop)
/// @param tab_size Tab size (default 4, minimum 1)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_tab_size(
  int editor_handle,
  int tab_size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set editor scale factor
/// @param scale Scale factor (1.0 = 100%)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Float, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_scale(
  int editor_handle,
  double scale,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set line spacing parameters (formula: line_height = font_height * mult + add)
/// @param add Extra line spacing in pixels (default 0)
/// @param mult Line spacing multiplier (default 1.0)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Float,
    ffi.Float,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_spacing(
  int editor_handle,
  double add,
  double mult,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set extra horizontal padding between gutter split and text content start
/// @param padding Padding in pixels (clamped to >= 0)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Float, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_content_start_padding(
  int editor_handle,
  double padding,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set whether to render gutter split line
/// @param show 0=hide, non-zero=show
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_show_split_line(
  int editor_handle,
  int show,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set current line render mode
/// @param mode 0=BACKGROUND(fill), 1=BORDER(stroke), 2=NONE(disabled)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_current_line_render_mode(
  int editor_handle,
  int mode,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set whether gutter stays fixed during horizontal scroll
/// @param sticky 0=gutter scrolls with content (mobile style), non-zero=gutter fixed (desktop style)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_gutter_sticky(
  int editor_handle,
  int sticky,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set whether gutter area is visible
/// @param visible 0=hide entire gutter, non-zero=show gutter
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_gutter_visible(
  int editor_handle,
  int visible,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set selection handle hit-test configuration using offset rects
/// @param start_left/start_top/start_right/start_bottom  Start handle hit area offset from cursor bottom anchor (handle tip)
/// @param end_left/end_top/end_right/end_bottom  End handle hit area offset from cursor bottom anchor (handle tip)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_handle_config(
  int editor_handle,
  double start_left,
  double start_top,
  double start_right,
  double start_bottom,
  double end_left,
  double end_top,
  double end_right,
  double end_bottom,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set scrollbar full configuration (geometry + behavior)
/// @param thickness Scrollbar thickness in pixels
/// @param min_thumb Minimum scrollbar thumb length in pixels
/// @param thumb_hit_padding Extra thumb hit-test padding in pixels
/// @param mode 0=ALWAYS, 1=TRANSIENT, 2=NEVER
/// @param thumb_draggable 1=thumb drag enabled, 0=disabled
/// @param track_tap_mode 0=JUMP, 1=DISABLED
/// @param fade_delay_ms Delay before hide in TRANSIENT mode
/// @param fade_duration_ms Fade duration in TRANSIENT mode (used for both fade-in and fade-out)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_scrollbar_config(
  int editor_handle,
  double thickness,
  double min_thumb,
  double thumb_hit_padding,
  int mode,
  int thumb_draggable,
  int track_tap_mode,
  int fade_delay_ms,
  int fade_duration_ms,
  ffi.Pointer<ffi.Size> out_size,
);
